--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,79 @@ body {
   font-size: 10px;
 }
 
-div {
-  float: left;
-  margin: 1% 0;
+.container{
+  margin: 0 auto;
   width: 100%;
-  padding: 20px 25px;
 }
 
-@media screen and (min-width: 575px){
-  div {
-      margin: 1%;
-      width:48%;
+.preview{
+  height: 380px;
+  width: 100%;
+}
+
+.container > h1{
+  margin: 30px 0;
+  font-family:sans-serif;
+  font-size: 1.4em;
+  letter-spacing: .2em;
+  text-align: center;
+  text-transform:uppercase;
+}
+
+.preview h1{
+  font-size: 2.4em;
+  padding: 18%;
+  text-align: left;
+}
+
+.baku{
+  background-image: url(https://github.com/specs24/css-exercise-four/blob/master/images/baku.jpg?raw=true);
+  background-size: cover;
+  bacground position: left;
+  
+}
+.london {
+  background-image: url(https://github.com/specs24/css-exercise-four/blob/master/images/london.png?raw=true);
+  background-size: cover;
+  bacground position: left;
+}
+
+.madrid{
+  background-image: url(https://github.com/specs24/css-exercise-four/blob/master/images/madrid.jpg?raw=true);
+  background-size: cover;
+  bacground position: left;
+}
+
+.rome{
+  background-image: url(https://github.com/specs24/css-exercise-four/blob/master/images/rome.jpg?raw=true);
+  background-size: cover;
+  bacground position: left;
+}
+
+@media (min-width: 600px) {
+  .container {
+    width: 90%;
+    margin: auto 0;
   }
+  
+  .preview {
+    float: right;
+    height:200px;
+    margin: 1% 1%;
+    width: 40%;
+  } 
 }
 
-@media screen and (min-width: 575px){
-  div {
-      margin: 1%;
-      width: 19%;
+@media (min-width: 900px) {
+  .container {
+    width: 70%;
   }
+  
+  .preview {
+    background-size: cover;
+    float: left;
+    height: 200px;
+    margin: 2em 1%;
+    width: 23%;
+  }  
 }
-
